update to latest version

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -177,7 +177,7 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2014A&A...564A.125B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-@ARTICLE{2015MNRAS.454.3500K,
+@ARTICLE{kuijken15,
        author = {{Kuijken}, Konrad and {Heymans}, Catherine and {Hildebrandt}, Hendrik and
          {Nakajima}, Reiko and {Erben}, Thomas and {de Jong}, Jelte T.~A. and
          {Viola}, Massimo and {Choi}, Ami and {Hoekstra}, Henk and
@@ -206,7 +206,7 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.454.3500K},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-@ARTICLE{2015A&A...582A..62D,
+@ARTICLE{dejong15,
        author = {{de Jong}, Jelte T.~A. and {Verdoes Kleijn}, Gijs A. and
          {Boxhoorn}, Danny R. and {Buddelmeijer}, Hugo and
          {Capaccioli}, Massimo and {Getman}, Fedor and {Grado}, Aniello and
@@ -240,7 +240,7 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2015A&A...582A..62D},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-@ARTICLE{2017A&A...604A.134D,
+@ARTICLE{dejong17,
        author = {{de Jong}, Jelte T.~A. and {Verdoes Kleijn}, Gijs A. and
          {Erben}, Thomas and {Hildebrandt}, Hendrik and {Kuijken}, Konrad and
          {Sikkema}, Gert and {Brescia}, Massimo and {Bilicki}, Maciej and
@@ -272,6 +272,28 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2017A&A...604A.134D},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{kuijken19,
+       author = {{Kuijken}, K. and {Heymans}, C. and {Dvornik}, A. and {Hildebrandt}, H. and
+         {de Jong}, J.~T.~A. and {Wright}, A.~H. and {Erben}, T. and
+         {Bilicki}, M. and {Giblin}, B. and {Shan}, H. -Y. and {Getman}, F. and
+         {Grado}, A. and {Hoekstra}, H. and {Miller}, L. and {Napolitano}, N. and
+         {Paolilo}, M. and {Radovich}, M. and {Schneider}, P. and {Sutherland
+        }, W. and {Tewes}, M. and {Tortora}, C. and {Valentijn}, E.~A. and
+         {Verdoes Kleijn}, G.~A.},
+        title = "{The fourth data release of the Kilo-Degree Survey: ugri imaging and nine-band optical-IR photometry over 1000 square degrees}",
+      journal = {\aap},
+     keywords = {galaxies: general, surveys, large-scale structure of Universe, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2019,
+        month = may,
+       volume = {625},
+          eid = {A2},
+        pages = {A2},
+          doi = {10.1051/0004-6361/201834918},
+archivePrefix = {arXiv},
+       eprint = {1902.11265},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...625A...2K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 @ARTICLE{2013Msngr.154...32E,
        author = {{Edge}, A. and {Sutherland}, W. and {Kuijken}, K. and {Driver}, S. and
          {McMahon}, R. and {Eales}, S. and {Emerson}, J.~P.},
@@ -327,7 +349,7 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2000ApJ...536..571B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-@ARTICLE{2017MNRAS.465.1454H,
+@ARTICLE{hildebrandt17,
        author = {{Hildebrandt}, H. and {Viola}, M. and {Heymans}, C. and {Joudaki}, S. and
          {Kuijken}, K. and {Blake}, C. and {Erben}, T. and {Joachimi}, B. and
          {Klaes}, D. and {Miller}, L. and {Morrison}, C.~B. and {Nakajima}, R. and
@@ -618,6 +640,171 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.481.1149Z},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{DES3,
+       author = {{Abbott}, T.~M.~C. and {Abdalla}, F.~B. and {Alarcon}, A. and
+         {Aleksi{\'c}}, J. and {Allam}, S. and {Allen}, S. and {Amara}, A. and
+         {Annis}, J. and {Asorey}, J. and {Avila}, S. and {Bacon}, D. and
+         {Balbinot}, E. and {Banerji}, M. and {Banik}, N. and {Barkhouse}, W. and
+         {Baumer}, M. and {Baxter}, E. and {Bechtol}, K. and {Becker}, M.~R. and
+         {Benoit-L{\'e}vy}, A. and {Benson}, B.~A. and {Bernstein}, G.~M. and
+         {Bertin}, E. and {Blazek}, J. and {Bridle}, S.~L. and {Brooks}, D. and
+         {Brout}, D. and {Buckley-Geer}, E. and {Burke}, D.~L. and
+         {Busha}, M.~T. and {Campos}, A. and {Capozzi}, D. and
+         {Carnero Rosell}, A. and {Carrasco Kind}, M. and {Carretero}, J. and
+         {Castander}, F.~J. and {Cawthon}, R. and {Chang}, C. and {Chen}, N. and
+         {Childress}, M. and {Choi}, A. and {Conselice}, C. and
+         {Crittenden}, R. and {Crocce}, M. and {Cunha}, C.~E. and
+         {D'Andrea}, C.~B. and {da Costa}, L.~N. and {Das}, R. and
+         {Davis}, T.~M. and {Davis}, C. and {De Vicente}, J. and {DePoy}, D.~L. and
+         {DeRose}, J. and {Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and
+         {Dodelson}, S. and {Doel}, P. and {Drlica-Wagner}, A. and
+         {Eifler}, T.~F. and {Elliott}, A.~E. and {Elsner}, F. and
+         {Elvin-Poole}, J. and {Estrada}, J. and {Evrard}, A.~E. and {Fang}, Y. and
+         {Fernandez}, E. and {Fert{\'e}}, A. and {Finley}, D.~A. and
+         {Flaugher}, B. and {Fosalba}, P. and {Friedrich}, O. and {Frieman}, J. and
+         {Garc{\'\i}a-Bellido}, J. and {Garcia-Fernandez}, M. and {Gatti}, M. and
+         {Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and
+         {Gill}, M.~S.~S. and {Glazebrook}, K. and {Goldstein}, D.~A. and
+         {Gruen}, D. and {Gruendl}, R.~A. and {Gschwend}, J. and
+         {Gutierrez}, G. and {Hamilton}, S. and {Hartley}, W.~G. and
+         {Hinton}, S.~R. and {Honscheid}, K. and {Hoyle}, B. and {Huterer}, D. and
+         {Jain}, B. and {James}, D.~J. and {Jarvis}, M. and {Jeltema}, T. and
+         {Johnson}, M.~D. and {Johnson}, M.~W.~G. and {Kacprzak}, T. and
+         {Kent}, S. and {Kim}, A.~G. and {King}, A. and {Kirk}, D. and
+         {Kokron}, N. and {Kovacs}, A. and {Krause}, E. and {Krawiec}, C. and
+         {Kremin}, A. and {Kuehn}, K. and {Kuhlmann}, S. and {Kuropatkin}, N. and
+         {Lacasa}, F. and {Lahav}, O. and {Li}, T.~S. and {Liddle}, A.~R. and
+         {Lidman}, C. and {Lima}, M. and {Lin}, H. and {MacCrann}, N. and
+         {Maia}, M.~A.~G. and {Makler}, M. and {Manera}, M. and {March}, M. and
+         {Marshall}, J.~L. and {Martini}, P. and {McMahon}, R.~G. and
+         {Melchior}, P. and {Menanteau}, F. and {Miquel}, R. and {Miranda}, V. and
+         {Mudd}, D. and {Muir}, J. and {M{\"o}ller}, A. and {Neilsen}, E. and
+         {Nichol}, R.~C. and {Nord}, B. and {Nugent}, P. and {Ogando}, R.~L.~C. and
+         {Palmese}, A. and {Peacock}, J. and {Peiris}, H.~V. and {Peoples}, J. and
+         {Percival}, W.~J. and {Petravick}, D. and {Plazas}, A.~A. and
+         {Porredon}, A. and {Prat}, J. and {Pujol}, A. and {Rau}, M.~M. and
+         {Refregier}, A. and {Ricker}, P.~M. and {Roe}, N. and {Rollins}, R.~P. and
+         {Romer}, A.~K. and {Roodman}, A. and {Rosenfeld}, R. and {Ross}, A.~J. and
+         {Rozo}, E. and {Rykoff}, E.~S. and {Sako}, M. and {Salvador}, A.~I. and
+         {Samuroff}, S. and {S{\'a}nchez}, C. and {Sanchez}, E. and
+         {Santiago}, B. and {Scarpine}, V. and {Schindler}, R. and
+         {Scolnic}, D. and {Secco}, L.~F. and {Serrano}, S. and
+         {Sevilla-Noarbe}, I. and {Sheldon}, E. and {Smith}, R.~C. and
+         {Smith}, M. and {Smith}, J. and {Soares-Santos}, M. and {Sobreira}, F. and
+         {Suchyta}, E. and {Tarle}, G. and {Thomas}, D. and {Troxel}, M.~A. and
+         {Tucker}, D.~L. and {Tucker}, B.~E. and {Uddin}, S.~A. and
+         {Varga}, T.~N. and {Vielzeuf}, P. and {Vikram}, V. and {Vivas}, A.~K. and
+         {Walker}, A.~R. and {Wang}, M. and {Wechsler}, R.~H. and {Weller}, J. and
+         {Wester}, W. and {Wolf}, R.~C. and {Yanny}, B. and {Yuan}, F. and
+         {Zenteno}, A. and {Zhang}, B. and {Zhang}, Y. and {Zuntz}, J. and
+         {Dark Energy Survey Collaboration}},
+        title = "{Dark Energy Survey year 1 results: Cosmological constraints from galaxy clustering and weak lensing}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = aug,
+       volume = {98},
+       number = {4},
+          eid = {043526},
+        pages = {043526},
+          doi = {10.1103/PhysRevD.98.043526},
+archivePrefix = {arXiv},
+       eprint = {1708.01530},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018PhRvD..98d3526A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{DES4,
+       author = {{Sevilla-Noarbe}, I. and {Bechtol}, K. and {Carrasco Kind}, M. and
+         {Carnero Rosell}, A. and {Becker}, M.~R. and {Drlica-Wagner}, A. and
+         {Gruendl}, R.~A. and {Rykoff}, E.~S. and {Sheldon}, E. and {Yanny}, B. and
+         {Alarcon}, A. and {Allam}, S. and {Amon}, A. and {Benoit-L{\'e}vy}, A. and
+         {Bernstein}, G.~M. and {Bertin}, E. and {Burke}, D.~L. and
+         {Carretero}, J. and {Choi}, A. and {Diehl}, H.~T. and {Everett}, S. and
+         {Flaugher}, B. and {Gaztanaga}, E. and {Gschwend}, J. and
+         {Harrison}, I. and {Hartley}, W.~G. and {Hoyle}, B. and {Jarvis}, M. and
+         {Johnson}, M.~D. and {Kessler}, R. and {Kron}, R. and {Kuropatkin}, N. and
+         {Leistedt}, B. and {Li}, T.~S. and {Menanteau}, F. and {Morganson}, E. and
+         {Ogando}, R.~L.~C. and {Palmese}, A. and {Paz-Chinch{\'o}n}, F. and
+         {Pieres}, A. and {Pond}, C. and {Rodriguez-Monroy}, M. and
+         {Allyn-Smith}, J. and {Stringer}, K.~M. and {Troxel}, M.~A. and
+         {Tucker}, D.~L. and {de Vicente}, J. and {Wester}, W. and {Zhang}, Y. and
+         {Abbott}, T.~M.~C. and {Aguena}, M. and {Annis}, J. and {Avila}, S. and
+         {Bhargava}, S. and {Bridle}, S.~L. and {Brooks}, D. and {Brout}, D. and
+         {Castander}, F.~J. and {Cawthon}, R. and {Chang}, C. and
+         {Conselice}, C. and {Costanzi}, M. and {Crocce}, M. and
+         {da Costa}, L.~N. and {Pereira}, M.~E.~E. and {Davis}, T.~M. and
+         {Desai}, S. and {Dietrich}, J.~P. and {Doel}, P. and {Eckert}, K. and
+         {Evrard}, A.~E. and {Ferrero}, I. and {Fosalba}, P. and
+         {Garc{\'\i}a-Bellido}, J. and {Gerdes}, D.~W. and {Giannantonio}, T. and
+         {Gruen}, D. and {Gutierrez}, G. and {Hinton}, S.~R. and
+         {Hollowood}, D.~L. and {Honscheid}, K. and {Huff}, E.~M. and
+         {Huterer}, D. and {James}, D.~J. and {Jeltema}, T. and {Kuehn}, K. and
+         {Lahav}, O. and {Lidman}, C. and {Lima}, M. and {Lin}, H. and
+         {Maia}, M.~A.~G. and {Marshall}, J.~L. and {Martini}, P. and
+         {Melchior}, P. and {Miquel}, R. and {Mohr}, J.~J. and {Morgan}, R. and
+         {Neilsen}, E. and {Plazas}, A.~A. and {Romer}, A.~K. and {Roodman}, A. and
+         {Sanchez}, E. and {Scarpine}, V. and {Schubnell}, M. and {Serrano}, S. and
+         {Smith}, M. and {Suchyta}, E. and {Tarle}, G. and {Thomas}, D. and
+         {To}, C. and {Varga}, T.~N. and {Wechsler}, R.~H. and {Weller}, J. and
+         {Wilkinson}, R.~D.},
+        title = "{Dark Energy Survey Year 3 Results: Photometric Data Set for Cosmology}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2020,
+        month = nov,
+          eid = {arXiv:2011.03407},
+        pages = {arXiv:2011.03407},
+archivePrefix = {arXiv},
+       eprint = {2011.03407},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv201103407S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{DES5,
+       author = {{Gatti}, M. and {Sheldon}, E. and {Amon}, A. and {Becker}, M. and
+         {Troxel}, M. and {Choi}, A. and {Doux}, C. and {MacCrann}, N. and
+         {Navarro Alsina}, A. and {Harrison}, I. and {Gruen}, D. and
+         {Bernstein}, G. and {Jarvis}, M. and {Secco}, L.~F. and
+         {Fert{\'e}}, A. and {Shin}, T. and {McCullough}, J. and
+         {Rollins}, R.~P. and {Chen}, R. and {Chang}, C. and {Pandey}, S. and
+         {Tutusaus}, I. and {Prat}, J. and {Elvin-Poole}, J. and {Sanchez}, C. and
+         {Plazas}, A.~A. and {Roodman}, A. and {Zuntz}, J. and
+         {Abbott}, T.~M.~C. and {Aguena}, M. and {Allam}, S. and {Annis}, J. and
+         {Avila}, S. and {Bacon}, D. and {Bertin}, E. and {Bhargava}, S. and
+         {Brooks}, D. and {Burke}, D.~L. and {Carnero Rosell}, A. and
+         {Carrasco Kind}, M. and {Carretero}, J. and {Castander}, F.~J. and
+         {Conselice}, C. and {Costanzi}, M. and {da Costa}, L.~N. and
+         {Davis}, T.~M. and {De Vicente}, J. and {Desai}, S. and {Diehl}, H.~T. and
+         {Dietrich}, J.~P. and {Doel}, P. and {Drlica-Wagner}, A. and
+         {Eckert}, K. and {Everett}, S. and {Ferrero}, I. and {Frieman}, J. and
+         {Garc{\'\i}a-Bellido}, J. and {Gerdes}, D.~W. and {Giannantonio}, T. and
+         {Gruendl}, R.~A. and {Gschwend}, J. and {Gutierrez}, G. and
+         {Hartley}, W.~G. and {Hinton}, S.~R. and {Hollowood}, D.~L. and
+         {Honscheid}, K. and {Hoyle}, B. and {Huff}, E.~M. and {Huterer}, D. and
+         {Jain}, B. and {James}, D.~J. and {Jeltema}, T. and {Krause}, E. and
+         {Kron}, R. and {Kuropatkin}, N. and {Lima}, M. and {Maia}, M.~A.~G. and
+         {Marshall}, J.~L. and {Miquel}, R. and {Morgan}, R. and {Myles}, J. and
+         {Palmese}, A. and {Paz-Chinch{\'o}n}, F. and {Rykoff}, E.~S. and
+         {Samuroff}, S. and {Sanchez}, E. and {Scarpine}, V. and
+         {Schubnell}, M. and {Serrano}, S. and {Sevilla-Noarbe}, I. and
+         {Smith}, M. and {Suchyta}, E. and {Swanson}, M.~E.~C. and {Tarle}, G. and
+         {Thomas}, D. and {To}, C. and {Tucker}, D.~L. and {Varga}, T.~N. and
+         {Wechsler}, R.~H. and {Weller}, J. and {Wester}, W. and
+         {Wilkinson}, R.~D.},
+        title = "{Dark Energy Survey Year 3 Results: Weak Lensing Shape Catalogue}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = nov,
+          eid = {arXiv:2011.03408},
+        pages = {arXiv:2011.03408},
+archivePrefix = {arXiv},
+       eprint = {2011.03408},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv201103408G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 @ARTICLE{2019NatAs...3..212S,
        author = {{Salvato}, Mara and {Ilbert}, Olivier and {Hoyle}, Ben},
         title = "{The many flavours of photometric redshifts}",
@@ -805,6 +992,504 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2011A&A...527A..26J},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{bridle02,
+       author = {{Bridle}, S.~L. and {Crittenden}, R. and {Melchiorri}, A. and
+         {Hobson}, M.~P. and {Kneissl}, R. and {Lasenby}, A.~N.},
+        title = "{Analytic marginalization over CMB calibration and beam uncertainty}",
+      journal = {\mnras},
+     keywords = {methods: statistical, cosmic microwave background, cosmology: observations, cosmology: theory, Astrophysics, High Energy Physics - Phenomenology},
+         year = 2002,
+        month = oct,
+       volume = {335},
+       number = {4},
+        pages = {1193-1200},
+          doi = {10.1046/j.1365-8711.2002.05709.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0112114},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002MNRAS.335.1193B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{fortuna20,
+       author = {{Fortuna}, Maria Cristina and {Hoekstra}, Henk and {Joachimi}, Benjamin and
+         {Johnston}, Harry and {Chisari}, Nora Elisa and {Georgiou}, Christos and
+         {Mahony}, Constance},
+        title = "{The halo model as a versatile tool to predict intrinsic alignments}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2020,
+        month = mar,
+          eid = {arXiv:2003.02700},
+        pages = {arXiv:2003.02700},
+archivePrefix = {arXiv},
+       eprint = {2003.02700},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200302700F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{kaiser92,
+       author = {{Kaiser}, Nick},
+        title = "{Weak Gravitational Lensing of Distant Galaxies}",
+      journal = {\apj},
+     keywords = {Galactic Clusters, Galactic Structure, Gravitational Lenses, Mass Distribution, Power Spectra, Quasars, Spatial Distribution, Universe, Astrophysics, COSMOLOGY: GRAVITATIONAL LENSING},
+         year = 1992,
+        month = apr,
+       volume = {388},
+        pages = {272},
+          doi = {10.1086/171151},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1992ApJ...388..272K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{vanUitert18,
+       author = {{van Uitert}, Edo and {Joachimi}, Benjamin and {Joudaki}, Shahab and
+         {Amon}, Alexandra and {Heymans}, Catherine and {K{\"o}hlinger}, Fabian and
+         {Asgari}, Marika and {Blake}, Chris and {Choi}, Ami and
+         {Erben}, Thomas and {Farrow}, Daniel J. and
+         {Harnois-D{\'e}raps}, Joachim and {Hildebrandt}, Hendrik and
+         {Hoekstra}, Henk and {Kitching}, Thomas D. and {Klaes}, Dominik and
+         {Kuijken}, Konrad and {Merten}, Julian and {Miller}, Lance and
+         {Nakajima}, Reiko and {Schneider}, Peter and {Valentijn}, Edwin and
+         {Viola}, Massimo},
+        title = "{KiDS+GAMA: cosmology constraints from a joint analysis of cosmic shear, galaxy-galaxy lensing, and angular clustering}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, methods: statistical, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = jun,
+       volume = {476},
+       number = {4},
+        pages = {4662-4689},
+          doi = {10.1093/mnras/sty551},
+archivePrefix = {arXiv},
+       eprint = {1706.05004},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.476.4662V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Efstathiou18,
+       author = {{Efstathiou}, George and {Lemos}, Pablo},
+        title = "{Statistical inconsistencies in the KiDS-450 data set}",
+      journal = {\mnras},
+     keywords = {cosmic background radiation, cosmological parameters, large-scale structure of Universe, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = may,
+       volume = {476},
+       number = {1},
+        pages = {151-157},
+          doi = {10.1093/mnras/sty099},
+archivePrefix = {arXiv},
+       eprint = {1707.00483},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.476..151E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Troxel15,
+       author = {{Troxel}, M.~A. and {Ishak}, Mustapha},
+        title = "{The intrinsic alignment of galaxies and its impact on weak gravitational lensing in an era of precision cosmology}",
+      journal = {\physrep},
+     keywords = {Weak gravitational lensing, Intrinsic alignment, Cosmology, Large-scale structure, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, General Relativity and Quantum Cosmology},
+         year = 2015,
+        month = feb,
+       volume = {558},
+        pages = {1-59},
+          doi = {10.1016/j.physrep.2014.11.001},
+archivePrefix = {arXiv},
+       eprint = {1407.6990},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015PhR...558....1T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Hadzhiyska20,
+       author = {{Hadzhiyska}, Boryana and {Alonso}, David and {Nicola}, Andrina and
+         {Slosar}, An{\v{z}}e},
+        title = "{Analytic marginalization of $N(z)$ uncertainties in tomographic galaxy surveys}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = jul,
+          eid = {arXiv:2007.14989},
+        pages = {arXiv:2007.14989},
+archivePrefix = {arXiv},
+       eprint = {2007.14989},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200714989H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Mice1,
+       author = {{Fosalba}, P. and {Crocce}, M. and {Gazta{\~n}aga}, E. and {Castand
+        er}, F.~J.},
+        title = "{The MICE grand challenge lightcone simulation - I. Dark matter clustering}",
+      journal = {\mnras},
+     keywords = {methods: numerical, galaxies: statistics, dark matter, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2015,
+        month = apr,
+       volume = {448},
+       number = {4},
+        pages = {2987-3000},
+          doi = {10.1093/mnras/stv138},
+archivePrefix = {arXiv},
+       eprint = {1312.1707},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.448.2987F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Mice2,
+       author = {{Crocce}, M. and {Castander}, F.~J. and {Gazta{\~n}aga}, E. and
+         {Fosalba}, P. and {Carretero}, J.},
+        title = "{The MICE Grand Challenge lightcone simulation - II. Halo and galaxy catalogues}",
+      journal = {\mnras},
+     keywords = {methods: numerical, cosmology: observations, dark energy, distance scale, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2015,
+        month = oct,
+       volume = {453},
+       number = {2},
+        pages = {1513-1530},
+          doi = {10.1093/mnras/stv1708},
+archivePrefix = {arXiv},
+       eprint = {1312.2013},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.453.1513C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Mice3,
+       author = {{Fosalba}, P. and {Gazta{\~n}aga}, E. and {Castander}, F.~J. and
+         {Crocce}, M.},
+        title = "{The MICE Grand Challenge light-cone simulation - III. Galaxy lensing mocks from all-sky lensing maps}",
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, methods: analytical, methods: numerical, galaxies: general, cosmology: theory, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2015,
+        month = feb,
+       volume = {447},
+       number = {2},
+        pages = {1319-1332},
+          doi = {10.1093/mnras/stu2464},
+archivePrefix = {arXiv},
+       eprint = {1312.2947},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.447.1319F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{asgari20,
+       author = {{Asgari}, Marika and {Lin}, Chieh-An and {Joachimi}, Benjamin and
+         {Giblin}, Benjamin and {Heymans}, Catherine and {Hildebrandt}, Hendrik and
+         {Kannawadi}, Arun and {St{\"o}lzner}, Benjamin and
+         {Tr{\"o}ster}, Tilman and {van den Busch}, Jan Luca and
+         {Wright}, Angus H. and {Bilicki}, Maciej and {Blake}, Chris and
+         {de Jong}, Jelte and {Dvornik}, Andrej and {Erben}, Thomas and
+         {Getman}, Fedor and {Hoekstra}, Henk and {K{\"o}hlinger}, Fabian and
+         {Kuijken}, Konrad and {Miller}, Lance and {Radovich}, Mario and
+         {Schneider}, Peter and {Shan}, HuanYuan and {Valentijn}, Edwin},
+        title = "{KiDS-1000 Cosmology: Cosmic shear constraints and comparison between two point statistics}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = jul,
+          eid = {arXiv:2007.15633},
+        pages = {arXiv:2007.15633},
+archivePrefix = {arXiv},
+       eprint = {2007.15633},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200715633A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{alarcon,
+       author = {{Alarcon}, Alex and {S{\'a}nchez}, Carles and {Bernstein}, Gary M. and
+         {Gazta{\~n}aga}, Enrique},
+        title = "{Redshift inference from the combination of galaxy colours and clustering in a hierarchical Bayesian model - Application to realistic N-body simulations}",
+      journal = {\mnras},
+     keywords = {cosmology: observations, dark energy, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2020,
+        month = aug,
+       volume = {498},
+       number = {2},
+        pages = {2614-2631},
+          doi = {10.1093/mnras/staa2478},
+archivePrefix = {arXiv},
+       eprint = {1910.07127},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.498.2614A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{sanchez,
+       author = {{S{\'a}nchez}, Carles and {Bernstein}, Gary M.},
+        title = "{Redshift inference from the combination of galaxy colours and clustering in a hierarchical Bayesian model}",
+      journal = {\mnras},
+     keywords = {cosmology: observations, galaxy: surveys, photometric redshifts, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2019,
+        month = feb,
+       volume = {483},
+       number = {2},
+        pages = {2801-2813},
+          doi = {10.1093/mnras/sty3222},
+archivePrefix = {arXiv},
+       eprint = {1807.11873},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.483.2801S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{hildebrandt20,
+       author = {{Hildebrandt}, H. and {van den Busch}, J.~L. and {Wright}, A.~H. and
+         {Blake}, C. and {Joachimi}, B. and {Kuijken}, K. and {Tr{\"o}ster}, T. and
+         {Asgari}, M. and {Bilicki}, M. and {de Jong}, J.~T.~A. and
+         {Dvornik}, A. and {Erben}, T. and {Getman}, F. and {Giblin}, B. and
+         {Heymans}, C. and {Kannawadi}, A. and {Lin}, C. -A. and {Shan}, H. -Y.},
+        title = "{KiDS-1000 catalogue: Redshift distributions and their calibration}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2020,
+        month = jul,
+          eid = {arXiv:2007.15635},
+        pages = {arXiv:2007.15635},
+archivePrefix = {arXiv},
+       eprint = {2007.15635},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200715635H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{joachimi20,
+       author = {{Joachimi}, B. and {Lin}, C. -A. and {Asgari}, M. and {Tr{\"o}ster}, T. and
+         {Heymans}, C. and {Hildebrandt}, H. and {K{\"o}hlinger}, F. and
+         {S{\'a}nchez}, A.~G. and {Wright}, A.~H. and {Bilicki}, M. and
+         {Blake}, C. and {van den Busch}, J.~L. and {Crocce}, M. and
+         {Dvornik}, A. and {Erben}, T. and {Getman}, F. and {Giblin}, B. and
+         {Hoekstra}, H. and {Kannawadi}, A. and {Kuijken}, K. and
+         {Napolitano}, N.~R. and {Schneider}, P. and {Scoccimarro}, R. and
+         {Sellentin}, E. and {Shan}, H.~Y. and {von Wietersheim-Kramsta}, M. and
+         {Zuntz}, J.},
+        title = "{KiDS-1000 Methodology: Modelling and inference for joint weak gravitational lensing and spectroscopic galaxy clustering analysis}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2020,
+        month = jul,
+          eid = {arXiv:2007.01844},
+        pages = {arXiv:2007.01844},
+archivePrefix = {arXiv},
+       eprint = {2007.01844},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200701844J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{amara,
+       author = {{Amara}, Adam and {R{\'e}fr{\'e}gier}, Alexandre},
+        title = "{Optimal surveys for weak-lensing tomography}",
+      journal = {\mnras},
+     keywords = {gravitational lensing, cosmological parameters, cosmology: theory, Astrophysics},
+         year = 2007,
+        month = nov,
+       volume = {381},
+       number = {3},
+        pages = {1018-1026},
+          doi = {10.1111/j.1365-2966.2007.12271.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0610127},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007MNRAS.381.1018A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{wright_som,
+       author = {{Wright}, Angus H. and {Hildebrandt}, Hendrik and
+         {van den Busch}, Jan Luca and {Heymans}, Catherine},
+        title = "{Photometric redshift calibration with self-organising maps}",
+      journal = {\aap},
+     keywords = {techniques: photometric, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2020,
+        month = may,
+       volume = {637},
+          eid = {A100},
+        pages = {A100},
+          doi = {10.1051/0004-6361/201936782},
+archivePrefix = {arXiv},
+       eprint = {1909.09632},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...637A.100W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{wright_som_kv450,
+       author = {{Wright}, Angus H. and {Hildebrandt}, Hendrik and
+         {van den Busch}, Jan Luca and {Heymans}, Catherine and
+         {Joachimi}, Benjamin and {Kannawadi}, Arun and {Kuijken}, Konrad},
+        title = "{KiDS+VIKING-450: Improved cosmological parameter constraints from redshift calibration with self-organising maps}",
+      journal = {\aap},
+     keywords = {gravitational lensing: weak, cosmology: observations, surveys, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = aug,
+       volume = {640},
+          eid = {L14},
+        pages = {L14},
+          doi = {10.1051/0004-6361/202038389},
+archivePrefix = {arXiv},
+       eprint = {2005.04207},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...640L..14W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Buchs,
+       author = {{Buchs}, R. and {Davis}, C. and {Gruen}, D. and {DeRose}, J. and
+         {Alarcon}, A. and {Bernstein}, G.~M. and {S{\'a}nchez}, C. and
+         {Myles}, J. and {Roodman}, A. and {Allen}, S. and {Amon}, A. and
+         {Choi}, A. and {Masters}, D.~C. and {Miquel}, R. and {Troxel}, M.~A. and
+         {Wechsler}, R.~H. and {Abbott}, T.~M.~C. and {Annis}, J. and
+         {Avila}, S. and {Bechtol}, K. and {Bridle}, S.~L. and {Brooks}, D. and
+         {Buckley-Geer}, E. and {Burke}, D.~L. and {Carnero Rosell}, A. and
+         {Carrasco Kind}, M. and {Carretero}, J. and {Castander}, F.~J. and
+         {Cawthon}, R. and {D'Andrea}, C.~B. and {da Costa}, L.~N. and
+         {De Vicente}, J. and {Desai}, S. and {Diehl}, H.~T. and {Doel}, P. and
+         {Drlica-Wagner}, A. and {Eifler}, T.~F. and {Evrard}, A.~E. and
+         {Flaugher}, B. and {Fosalba}, P. and {Frieman}, J. and
+         {Garc{\'\i}a-Bellido}, J. and {Gaztanaga}, E. and {Gruendl}, R.~A. and
+         {Gschwend}, J. and {Gutierrez}, G. and {Hartley}, W.~G. and
+         {Hollowood}, D.~L. and {Honscheid}, K. and {James}, D.~J. and
+         {Kuehn}, K. and {Kuropatkin}, N. and {Lima}, M. and {Lin}, H. and
+         {Maia}, M.~A.~G. and {March}, M. and {Marshall}, J.~L. and
+         {Melchior}, P. and {Menanteau}, F. and {Ogando}, R.~L.~C. and
+         {Plazas}, A.~A. and {Rykoff}, E.~S. and {Sanchez}, E. and
+         {Scarpine}, V. and {Serrano}, S. and {Sevilla-Noarbe}, I. and
+         {Smith}, M. and {Soares-Santos}, M. and {Sobreira}, F. and
+         {Suchyta}, E. and {Swanson}, M.~E.~C. and {Tarle}, G. and {Thomas}, D. and
+         {Vikram}, V. and {DES Collaboration}},
+        title = "{Phenotypic redshifts with self-organizing maps: A novel method to characterize redshift distributions of source galaxies for weak lensing}",
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, galaxies: distances and redshifts, dark energy, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2019,
+        month = oct,
+       volume = {489},
+       number = {1},
+        pages = {820-841},
+          doi = {10.1093/mnras/stz2162},
+archivePrefix = {arXiv},
+       eprint = {1901.05005},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.489..820B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{vdBusch20,
+       author = {{van den Busch}, J.~L. and {Hildebrandt}, H. and {Wright}, A.~H. and
+         {Morrison}, C.~B. and {Blake}, C. and {Joachimi}, B. and {Erben}, T. and
+         {Heymans}, C. and {Kuijken}, K. and {Taylor}, E.~N.},
+        title = "{Testing KiDS cross-correlation redshifts with simulations}",
+      journal = {\aap},
+     keywords = {cosmology: observations, surveys, large-scale structure of Universe, galaxies: distances and redshifts, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2020,
+        month = oct,
+       volume = {642},
+          eid = {A200},
+        pages = {A200},
+          doi = {10.1051/0004-6361/202038835},
+archivePrefix = {arXiv},
+       eprint = {2007.01846},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...642A.200V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{schneider10,
+       author = {{Schneider}, P. and {Eifler}, T. and {Krause}, E.},
+        title = "{COSEBIs: Extracting the full E-/B-mode information from cosmic shear correlation functions}",
+      journal = {\aap},
+     keywords = {large-scale structure of Universe, gravitational lensing: weak, cosmological parameters, methods: statistical, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2010,
+        month = sep,
+       volume = {520},
+          eid = {A116},
+        pages = {A116},
+          doi = {10.1051/0004-6361/201014235},
+archivePrefix = {arXiv},
+       eprint = {1002.2136},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010A&A...520A.116S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{becker16,
+       author = {{Becker}, Matthew R. and {Rozo}, Eduardo},
+        title = "{Fourier band-power E/B-mode estimators for cosmic shear}",
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, methods: data analysis, cosmology: theory, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2016,
+        month = mar,
+       volume = {457},
+       number = {1},
+        pages = {304-312},
+          doi = {10.1093/mnras/stv3018},
+archivePrefix = {arXiv},
+       eprint = {1412.3851},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.457..304B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{schneider02,
+       author = {{Schneider}, P. and {van Waerbeke}, L. and {Kilbinger}, M. and
+         {Mellier}, Y.},
+        title = "{Analysis of two-point statistics of cosmic shear. I. Estimators and covariances}",
+      journal = {\aap},
+     keywords = {dark matter, gravitational lensing, large-scale structure of the Universe, Astrophysics},
+         year = 2002,
+        month = dec,
+       volume = {396},
+        pages = {1-19},
+          doi = {10.1051/0004-6361:20021341},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0206182},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002A&A...396....1S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{carretero,
+       author = {{Carretero}, J. and {Castander}, F.~J. and {Gazta{\~n}aga}, E. and
+         {Crocce}, M. and {Fosalba}, P.},
+        title = "{An algorithm to build mock galaxy catalogues using MICE simulations}",
+      journal = {\mnras},
+     keywords = {Astronomical data bases, catalogues, galaxies: evolution, galaxies: haloes, large-scale structure of Universe, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2015,
+        month = feb,
+       volume = {447},
+       number = {1},
+        pages = {646-670},
+          doi = {10.1093/mnras/stu2402},
+archivePrefix = {arXiv},
+       eprint = {1411.3286},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.447..646C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{hoffmann,
+       author = {{Hoffmann}, K. and {Bel}, J. and {Gazta{\~n}aga}, E. and {Crocce}, M. and
+         {Fosalba}, P. and {Castander}, F.~J.},
+        title = "{Measuring the growth of matter fluctuations with third-order galaxy correlations}",
+      journal = {\mnras},
+     keywords = {cosmology: miscellaneous, cosmology: observations, cosmology: theory, dark energy, dark matter, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2015,
+        month = feb,
+       volume = {447},
+       number = {2},
+        pages = {1724-1745},
+          doi = {10.1093/mnras/stu2492},
+archivePrefix = {arXiv},
+       eprint = {1403.1259},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.447.1724H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
